#1493 Helium MS. Fase1 Treure la versió 2.6
- Adaptar helium-ws

--- a/helium-ws/pom.xml
+++ b/helium-ws/pom.xml
@@ -83,9 +83,18 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<!-- Eliminar dependència core 2.6
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>helium-core-v26</artifactId>
+			<version>${helium.version}</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		 -->
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>helium-core</artifactId>
 			<version>${helium.version}</version>
 			<type>jar</type>
 			<scope>compile</scope>
