--- a/helium-ms/pom.xml
+++ b/helium-ms/pom.xml
@@ -59,6 +59,19 @@
 		    <version>1.6.1</version>
 		    <scope>test</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>ma.glasnost.orika</groupId>
+			<artifactId>orika-core</artifactId>
+			<version>1.4.6</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>slf4j-simple</artifactId>
+					<groupId>org.slf4j</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -66,6 +79,19 @@
 			<scope>test</scope>
 		</dependency>
 		
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.9</version>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- Helium -->
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>helium-core-api</artifactId>
+			<version>${helium.version}</version>
+		</dependency>
 		
 	</dependencies>
 
