#1503 Dev API Integració serveis externs

--- a/microservices/helium-dada-service/pom.xml
+++ b/microservices/helium-dada-service/pom.xml
@@ -13,7 +13,7 @@
 	<artifactId>helium-dada-service</artifactId>
 	<version>1.0.0</version>
 	<name>helium-dada-service</name>
-	<description>Servei de dades</description>
+	<description>MServei de dades</description>
 
 	<properties>
 		<maven.compiler.source>11</maven.compiler.source>
