--- a/microservices/helium-integracio-service/src/main/resources/application-local.properties
+++ b/microservices/helium-integracio-service/src/main/resources/application-local.properties
@@ -1,6 +1,14 @@
 spring.application.name=helium-integracio-service
 server.port=8084
 
+es.caib.helium.integracio.database.jdbc.driver=org.postgresql.Driver
+es.caib.helium.integracio.database.jdbc.url=jdbc:postgresql://localhost:5432/integracio
+es.caib.helium.integracio.database.jdbc.user=integracio_user
+es.caib.helium.integracio.database.jdbc.password=integracio_user_password
+es.caib.helium.integracio.database.jdbc.schema=integracio
+#spring.jpa.properties.hibernate.default_schema=integracio
+
+
 # Propietats persona
 
 es.caib.helium.integracio.persones.class=es.caib.helium.integracio.service.persones.PersonaServiceJdbcImpl
@@ -37,6 +45,72 @@ es.caib.helium.integracio.portafirmes.jdbc.password=helium
 
 # Propietats de firma 
 
+es.caib.helium.integracio.firma.service.class=es.caib.helium.integracio.service.firma.FirmaServicePortaFibImpl
+#es.caib.helium.integracio.firma.service.class=net.conselldemallorca.helium.integracio.plugins.firma.FirmaSimplePluginPortafib
+es.caib.helium.integracio.firma.portafib.username=dgdt-pre
+es.caib.helium.integracio.firma.portafib.location=Manacor
+es.caib.helium.integracio.firma.portafib.signer.email=suport@caib.es
+es.caib.helium.integracio.firma.portafib.plugins.signatureserver.portafib.api_passarela_url=https://proves.caib.es/portafib/ws/v1/PortaFIBPassarelaDeFirmaEnServidor
+#app.plugin.firma.portafib.plugins.signatureserver.portafib.api_passarela_username=$helium_portafib
+#app.plugin.firma.portafib.plugins.signatureserver.portafib.api_passarela_password=helium_portafib 
+es.caib.helium.integracio.firma.portafib.plugins.signatureserver.portafib.api_passarela_username=$helium_portafibpass
+es.caib.helium.integracio.firma.portafib.plugins.signatureserver.portafib.api_passarela_password=helium_portafibpass
+
+
+##########################################################################################
+
+# Propietats registre
+
+# Registre REGWEB2
+es.caib.helium.integracio.registre.service.reg2.class=net.conselldemallorca.helium.integracio.plugins.registre.RegistrePluginRegwebWs
+es.caib.helium.integracio.registre.ws.url=https://proves.caib.es/regweb2/WS/services/RegwebFacade
+#es.caib.helium.integracio.registre.service.ws.usuari=$helium_regweb
+#es.caib.helium.integracio.registre.service.ws.password=helium_regweb
+
+# Registre REGWEB3
+es.caib.helium.integracio.registre.service.rw3.class=es.caib.helium.integracio.service.registre.RegistreServiceRegWeb3Impl
+es.caib.helium.integracio.registre.service.ws.host=https://proves.caib.es/regweb3/ws/v3/
+es.caib.helium.integracio.registre.service.regweb3.registro.entrada=RegWebAsientoRegistral
+#app.registre.plugin.ws.host=https://dev.caib.es/regweb3/ws/v3/
+#noves propietats pel regweb3
+es.caib.helium.integracio.registre.service.ws.usuari=$helium_regweb
+es.caib.helium.integracio.registre.service.ws.password=helium_regweb
+
+#app.registre.plugin.ws.host=https://dev.caib.es/regweb3/ws/v3/
+es.caib.helium.integracio.registre.codi.entitat=A04003003
+es.caib.helium.integracio.registre.rds.model=GE0005ANEXGEN
+es.caib.helium.integracio.registre.rds.versio=1
+
+
+#app.registre.plugin.initial.context.factory=org.jboss.security.jndi.JndiLoginInitialContextFactory
+#app.registre.plugin.initial.context.factory=org.jboss.security.jndi.LoginInitialContextFactory
+#app.registre.plugin.url.pkg.prefixes=org.jboss.naming:org.jnp.interfaces
+#app.registre.plugin.provider.url=jnp://10.35.3.91:1099
+
+#app.registre.plugin.security.principal=admin
+#app.registre.plugin.security.credentials=admin
+
+#app.registre.plugin.class=net.conselldemallorca.helium.integracio.plugins.registre.RegistrePluginAjuntament
+#app.registre.plugin.initial.context.factory=org.jboss.security.jndi.JndiLoginInitialContextFactory
+#app.registre.plugin.initial.context.factory=org.jboss.security.jndi.LoginInitialContextFactory
+#app.registre.plugin.url.pkg.prefixes=org.jboss.naming:org.jnp.interfaces
+#app.registre.plugin.provider.url=jnp://10.35.3.96:21099
+#app.registre.plugin.provider.url=jnp://10.35.3.91:1099
+#app.registre.plugin.security.principal=admin
+#app.registre.plugin.security.credentials=admin
+#app.registre.plugin.url=http://10.35.3.96:18080/regtelws/services/v2/BackofficeFacade
+#app.registre.plugin.username=gestor
+#app.registre.plugin.password=gestor
+#app.registre.plugin.rds.model=GE0005ANEXGEN
+#app.registre.plugin.rds.versio=1
+app.registre.segell.entitat=LIMIT TECNOLOGIES
+
+
+##########################################################################################
+
+#Propietats arxiu
+
+#es.caib.helium.integracio.arxiu.class=
 
 ##########################################################################################
 
