--- a/microservices/helium-integracio-service/src/main/resources/application.properties
+++ b/microservices/helium-integracio-service/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.application.name=helium-integracio-service
 server.port=8084
 
+POSTGRES_USER=integracio_user
+POSTGRES_PASSWORD=integracio_user_password
+POSTGRES_DB=integracio
+
 #server.error.include-stacktrace=never
 
