--- a/microservices/helium-integracio-service/src/main/resources/application-local.properties
+++ b/microservices/helium-integracio-service/src/main/resources/application-local.properties
@@ -35,11 +35,42 @@ es.caib.helium.integracio.persones.plugin.ldap.attributes=sAMAccountName,givenNa
 
 #Propietats portafirmes
 
-#es.caib.helium.integracio.portafirmes.jdbc.class=es.caib.helium.integracio.service.persones.PersonaServiceJdbcImpl CANVIAR
-es.caib.helium.integracio.portafirmes.jdbc.driver=oracle.jdbc.OracleDriver
-es.caib.helium.integracio.portafirmes.jdbc.url=jdbc:oracle:thin:@10.35.3.242:1521:orcl
-es.caib.helium.integracio.portafirmes.jdbc.user=helium
-es.caib.helium.integracio.portafirmes.jdbc.password=helium
+# Configuracio bona PortasignaturesPluginCaib
+#es.caib.helium.integracio.portafirmes.service.class=net.conselldemallorca.helium.integracio.plugins.portasignatures.PortasignaturesPluginCaib
+#es.caib.helium.integracio.portafirmes.caib.url=https://proves.caib.es/portafib/portafirmasws/web/services/CWS
+#es.caib.helium.integracio.portafirmes.caib.usuari=$helium_portafib
+#es.caib.helium.integracio.portafirmes.caib.password=helium_portafib
+#es.caib.helium.integracio.portafirmes.caib.checkcerts=false
+
+
+# Classe del plugin de portafirmes versio nova
+es.caib.helium.integracio.portafirmes.service.class=es.caib.helium.integracio.service.portafirmes.PortaFirmaServicePortaFibImpl
+#es.caib.helium.integracio.portafirmes.portafib.base.url=https://proves.caib.es/portafib
+es.caib.helium.integracio.portafirmes.portafib.base.url=https://dev.caib.es/portafib
+es.caib.helium.integracio.portafirmes.portafib.path.peticio.firma=/ws/v1/PortaFIBPeticioDeFirma
+es.caib.helium.integracio.portafirmes.portafib.path.usuari.entitat=/ws/v1/PortaFIBUsuariEntitat
+#es.caib.helium.integracio.portafirmes.portafib.username=$helium_portafib
+#es.caib.helium.integracio.portafirmes.portafib.password=helium_portafib
+es.caib.helium.integracio.portafirmes.portafib.username=$helium_portafibpass
+es.caib.helium.integracio.portafirmes.portafib.password=helium_portafibpass
+es.caib.helium.integracio.portafirmes.portafib.log.actiu=true
+#dni/codi
+#es.caib.helium.integracio.portafirmes.portafib.usuari.id= 
+
+# Parametres per a la conversio de documents amb OpenOffice
+es.caib.helium.integracio.portafirmes.open.office.conversio.actiu=true
+es.caib.helium.integracio.portafirmes.open.office.conversio.host=10.35.3.87
+es.caib.helium.integracio.portafirmes.open.office.conversio.port=8100
+es.caib.helium.integracio.portafirmes.open.office.conversio.timeout=120
+
+# Inca
+#es.caib.helium.integracio.portafirmes.service.class=net.conselldemallorca.helium.integracio.plugins.portasignatures.PortasignaturesPluginCaib
+#es.caib.helium.integracio.portafirmes.inca.url=http://10.35.3.127:8180/portafib/portafirmasws/web/services/CWS
+#es.caib.helium.integracio.portafirmes.inca.usuari=ajinca_helium
+#es.caib.helium.integracio.portafirmes.inca.password=heliumpfi
+#es.caib.helium.integracio.portafirmes.inca.signatura.tipus=1
+#es.caib.helium.integracio.portafirmes.inca.id.usuari=dni
+#es.caib.helium.integracio.portafirmes.inca.checkcerts=false
 
 ##########################################################################################
 
@@ -51,8 +82,8 @@ es.caib.helium.integracio.firma.portafib.username=dgdt-pre
 es.caib.helium.integracio.firma.portafib.location=Manacor
 es.caib.helium.integracio.firma.portafib.signer.email=suport@caib.es
 es.caib.helium.integracio.firma.portafib.plugins.signatureserver.portafib.api_passarela_url=https://proves.caib.es/portafib/ws/v1/PortaFIBPassarelaDeFirmaEnServidor
-#app.plugin.firma.portafib.plugins.signatureserver.portafib.api_passarela_username=$helium_portafib
-#app.plugin.firma.portafib.plugins.signatureserver.portafib.api_passarela_password=helium_portafib 
+#es.caib.helium.integracio.firma.portafib.plugins.signatureserver.portafib.api_passarela_username=$helium_portafib
+#es.caib.helium.integracio.firma.portafib.plugins.signatureserver.portafib.api_passarela_password=helium_portafib 
 es.caib.helium.integracio.firma.portafib.plugins.signatureserver.portafib.api_passarela_username=$helium_portafibpass
 es.caib.helium.integracio.firma.portafib.plugins.signatureserver.portafib.api_passarela_password=helium_portafibpass
 
@@ -110,7 +141,28 @@ app.registre.segell.entitat=LIMIT TECNOLOGIES
 
 #Propietats arxiu
 
-#es.caib.helium.integracio.arxiu.class=
+es.caib.helium.integracio.arxiu.service.class=es.caib.helium.integracio.service.arxiu.ArxiuServiceCaibImpl
+es.caib.helium.integracio.arxiu.plugin.class=es.caib.plugins.arxiu.caib.ArxiuPluginCaib
+es.caib.helium.integracio.arxiu.caib.base.url=https://afirmades.caib.es:4430/esb
+es.caib.helium.integracio.arxiu.caib.aplicacio.codi=RIPEA
+es.caib.helium.integracio.arxiu.caib.usuari=app1
+es.caib.helium.integracio.arxiu.caib.contrasenya=app1
+
+es.caib.helium.integracio.arxiu.caib.csv.definicio=CSV_DEF
+#es.caib.helium.integracio.arxiu.caib.conversio.imprimible.url=http://sdevapplin2:28080/concsv/rest/printable/uuid
+#es.caib.helium.integracio.arxiu.caib.conversio.imprimible.usuari=$concsv_ripea
+#es.caib.helium.integracio.arxiu.caib.conversio.imprimible.contrasenya=concsv_ripea
+es.caib.helium.integracio.arxiu.caib.conversio.imprimible.url=https://dev.caib.es/concsv/rest/printable/uuid
+es.caib.helium.integracio.arxiu.caib.conversio.imprimible.usuari=$ripea_concsv
+es.caib.helium.integracio.arxiu.caib.conversio.imprimible.contrasenya=ripea_concsv
+
+# TIMEOUTS AFEGITS
+es.caib.helium.integracio.arxiu.caib.timeout.connect=600000
+es.caib.helium.integracio.arxiu.caib.timeout.read=600000
+#es.caib.helium.integracio.plugin.arxiu.caib.timeout.read=600000
+
+# URL base per a la verificacio de firmes
+es.caib.helium.integracio.arxiu.verificacio.baseurl=https://dev.caib.es/concsv/view.xhtml?hash=
 
 ##########################################################################################
 
