#1503 Dev API Integració serveis externs

--- a/microservices/helium-integracio-service/src/main/resources/application-local.properties
+++ b/microservices/helium-integracio-service/src/main/resources/application-local.properties
@@ -90,6 +90,56 @@ es.caib.helium.integracio.firma.portafib.plugins.signatureserver.portafib.api_pa
 
 ##########################################################################################
 
+# Propietats de validacio firma
+
+es.caib.helium.integracio.validacio.firma.service.class=es.caib.helium.integracio.service.validacio.ValidacioFirmaServiceImpl
+es.caib.helium.integracio.validacio.firma.plugin.class=org.fundaciobit.plugins.validatesignature.afirmacxf.AfirmaCxfValidateSignaturePlugin
+
+# AfirmaCxfValidateSignaturePlugin
+es.caib.helium.integracio.validacio.firma.afirmacxf.applicationID=CAIBDEV.RIPEA
+es.caib.helium.integracio.validacio.firma.afirmacxf.ignoreservercertificates=true
+es.caib.helium.integracio.validacio.firma.afirmacxf.TransformersTemplatesPath=${user.home}/Documentos/Helium/transformers
+#es.caib.helium.integracio.validacio.firma.afirmacxf.TransformersTemplatesPath=c:/helium/afirma/transformers
+es.caib.helium.integracio.validacio.firma.afirmacxf.endpoint=https://afirmades.caib.es:4430/afirmaws/services/DSSAfirmaVerify
+# CERTIFICATE Token
+#es.caib.helium.integracio.validacio.firma.afirmacxf.authorization.ks.path=/opt/helium/afirma/dgdt_proves.jks
+#es.caib.helium.integracio.validacio.firma.afirmacxf.authorization.ks.type=JKS
+#es.caib.helium.integracio.validacio.firma.afirmacxf.authorization.ks.password=12341234
+#es.caib.helium.integracio.validacio.firma.afirmacxf.authorization.ks.cert.alias=preprod-dgdt
+#es.caib.helium.integracio.validacio.firma.afirmacxf.authorization.ks.cert.password=12341234
+# USERNAME-PASSWORD Token
+es.caib.helium.integracio.validacio.firma.afirmacxf.authorization.username=RIPEA
+es.caib.helium.integracio.validacio.firma.afirmacxf.authorization.password=RIPEA
+es.caib.helium.integracio.validacio.firma.afirmacxf.authorization.method=UsernameToken
+
+# ###
+# Plugin de signatura digital
+# ###
+# Tipus de signatura de documents (caib, afirma)
+es.caib.helium.integracio.validacio.signatura.tipus=caib
+# app.signatura.token.llarg=true
+# Classe del plugin per a la signatura digital de documents
+es.caib.helium.integracio.validacio.signatura.class=net.conselldemallorca.helium.integracio.plugins.signatura.SignaturaPluginTest
+#app.signatura.plugin.class=net.conselldemallorca.helium.integracio.plugins.signatura.SignaturaPluginAfirma
+es.caib.helium.integracio.validacio.signatura.afirma.urlbase=http://localhost:8888/afirmaws/services
+es.caib.helium.integracio.validacio.signatura.afirma.appid=gobbal.ibit.soa
+es.caib.helium.integracio.validacio.signatura.afirma.usuari=ibitsoa
+es.caib.helium.integracio.validacio.signatura.afirma.contrasenya=fp49%ME$
+# Parametres per a configurar el client @Firma
+es.caib.helium.integracio.validacio.signatura.afirma.signature.algorithm=SHA1withRSA
+#app.signatura.afirma.signature.format=CAdES
+es.caib.helium.integracio.validacio.signatura.afirma.signature.format=PDF
+es.caib.helium.integracio.validacio.signatura.afirma.cert.filter=
+es.caib.helium.integracio.validacio.signatura.afirma.install.directory=afirma.5
+es.caib.helium.integracio.validacio.signatura.afirma.old.versions.action=1
+es.caib.helium.integracio.validacio.signatura.afirma.show.expired.certificates=true
+es.caib.helium.integracio.validacio.signatura.afirma.default.build=COMPLETA
+# Indica si el tipus de signatura que es realitza va adjuntada a dins un fitxer
+es.caib.helium.integracio.validacio.signatura.plugin.file.attached=true
+
+
+##########################################################################################
+
 # Propietats registre
 
 # Registre REGWEB2
