#1503 Dev API Integració serveis externs

--- a/microservices/helium-integracio-service/src/main/resources/application-local.properties
+++ b/microservices/helium-integracio-service/src/main/resources/application-local.properties
@@ -119,8 +119,8 @@ es.caib.helium.integracio.validacio.firma.afirmacxf.authorization.method=Usernam
 es.caib.helium.integracio.validacio.signatura.tipus=caib
 # app.signatura.token.llarg=true
 # Classe del plugin per a la signatura digital de documents
-es.caib.helium.integracio.validacio.signatura.class=net.conselldemallorca.helium.integracio.plugins.signatura.SignaturaPluginTest
-#app.signatura.plugin.class=net.conselldemallorca.helium.integracio.plugins.signatura.SignaturaPluginAfirma
+#es.caib.helium.integracio.validacio.signatura.class=net.conselldemallorca.helium.integracio.plugins.signatura.SignaturaPluginTest
+es.caib.helium.integracio.validacio.signatura.class=es.caib.helium.integracio.service.validacio.SignaturaPluginAfirma
 es.caib.helium.integracio.validacio.signatura.afirma.urlbase=http://localhost:8888/afirmaws/services
 es.caib.helium.integracio.validacio.signatura.afirma.appid=gobbal.ibit.soa
 es.caib.helium.integracio.validacio.signatura.afirma.usuari=ibitsoa
@@ -251,6 +251,23 @@ es.caib.helium.integracio.tramitacio.service.class=es.caib.helium.integracio.ser
 es.caib.helium.integracio.tramitacio.bantel.sistra.url=http://10.35.3.123:8080/sistraback/bantelws/services/v2/BackofficeFacade
 es.caib.helium.integracio.tramitacio.bantel.sistra.username=admin
 es.caib.helium.integracio.tramitacio.bantel.sistra.password=admin
+
+es.caib.helium.integracio.tramitacio.sistra.client.auth=BASIC
+es.caib.helium.integracio.tramitacio.sistra.client.generate.timestamp=false
+es.caib.helium.integracio.tramitacio.sistra.client.log.calls=false
+es.caib.helium.integracio.tramitacio.sistra.client.disable.cn.check=false
+es.caib.helium.integracio.tramitacio.sistra.client.bantel.username=$helium_sistra
+es.caib.helium.integracio.tramitacio.sistra.client.bantel.password=
+es.caib.helium.integracio.tramitacio.sistra.client.zonaper.username=$helium_sistra
+es.caib.helium.integracio.tramitacio.sistra.client.zonaper.password=
+es.caib.helium.integracio.tramitacio.sistra.client.redose.username=$helium_sistra
+es.caib.helium.integracio.tramitacio.sistra.client.redose.password=
+es.caib.helium.integracio.tramitacio.sistra.client.bantel.url=https://proves.caib.es/sistraback/bantelws/services/v2/BackofficeFacade
+es.caib.helium.integracio.tramitacio.sistra.client.zonaper.url=https://proves.caib.es/sistraback/zonaperws/services/v2/BackofficeFacade
+es.caib.helium.integracio.tramitacio.sistra.client.redose.url=https://proves.caib.es/sistraback/redosews/services/v2/BackofficeFacade
+es.caib.helium.integracio.tramitacio.sistra.client.regtel.url=https://proves.caib.es/sistraback/regtelws/services/v2/BackofficeFacade
+es.caib.helium.integracio.tramitacio.sistra.client.regtel.username=$helium_sistra
+es.caib.helium.integracio.tramitacio.sistra.client.regtel.password=
 
 spring.zipkin.enabled=false
 spring.cloud.discovery.enabled=false
