--- a/microservices/helium-integracio-service/src/main/resources/application-local.properties
+++ b/microservices/helium-integracio-service/src/main/resources/application-local.properties
@@ -186,6 +186,23 @@ es.caib.helium.integracio.registre.rds.versio=1
 #app.registre.plugin.rds.versio=1
 app.registre.segell.entitat=LIMIT TECNOLOGIES
 
+##########################################################################################
+
+#Propietats Custodia
+
+#es.caib.helium.integracio.custodia.service.class=net.conselldemallorca.helium.integracio.plugins.custodia.CustodiaPluginAlfresco
+es.caib.helium.integracio.custodia.service.class=es.caib.helium.integracio.service.custodia.CustodiaServiceCaibImpl
+#es.caib.helium.integracio.custodia.service.class=net.conselldemallorca.helium.integracio.plugins.custodia.CustodiaPluginFilesystem
+#es.caib.helium.integracio.custodia.filesystem.basedir=c:/tmp/helium/signatures/
+es.caib.helium.integracio.custodia.filesystem.basedir=/tmp/helium/signatures/
+es.caib.helium.integracio.custodia.caib.url=https://proves.caib.es/signatura/services/CustodiaDocumentos
+# usuari de pre teniem conflictes
+#es.caib.helium.integracio.custodia.caib.usuari=HELIUM
+#es.caib.helium.integracio.custodia.caib.password=HELIUMABC
+# usuari de des teniem conflictes
+es.caib.helium.integracio.custodia.caib.usuari=heliumdes
+es.caib.helium.integracio.custodia.caib.password= heliumdesABC
+es.caib.helium.integracio.custodia.caib.verificacio.baseurl=https://proves.caib.es/signatura/sigpub/
 
 ##########################################################################################
 
