Helium MS. Fase1 Message Server

--- a/microservices/helium-basems/src/main/resources/application.properties
+++ b/microservices/helium-basems/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.application.name=helium-base-service
 
+#configuració per defecte de la imatge de docker: vromero/activemq-artemis
+spring.artemis.user=artemis
+spring.artemis.password=simetraehcapa
