--- a/helium-core-api/pom.xml
+++ b/helium-core-api/pom.xml
@@ -42,6 +42,11 @@
 			</exclusions>
 		</dependency>
 		<dependency>
+			<groupId>net.conselldemallorca.helium</groupId>
+			<artifactId>helium-disseny-api</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>io.dropwizard.metrics</groupId>
 			<artifactId>metrics-core</artifactId>
 			<version>${metrics.version}</version>
