--- a/helium-disseny/pom.xml
+++ b/helium-disseny/pom.xml
@@ -33,6 +33,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+			<groupId>net.conselldemallorca.helium</groupId>
+			<artifactId>helium-disseny-api</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 	</dependencies>
 	<repositories>
 		<repository>
