--- a/microservices/helium-jbpm/helium-jbpm-api/pom.xml
+++ b/microservices/helium-jbpm/helium-jbpm-api/pom.xml
@@ -30,6 +30,11 @@
 <!--            <version>${helium.version}</version>-->
 <!--        </dependency>-->
         <dependency>
+            <groupId>net.conselldemallorca.helium</groupId>
+            <artifactId>helium-disseny-api</artifactId>
+            <version>${helium.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-acl</artifactId>
             <version>${spring-security.version}</version>
