--- a/microservices/helium-jbpm/pom.xml
+++ b/microservices/helium-jbpm/pom.xml
@@ -12,7 +12,8 @@
     <properties>
         <java.version>1.6</java.version>
         <jbpm.version>3.3.1.GA</jbpm.version>
-        <helium.version>3.2.112</helium.version>
+        <helium.version>3.2</helium.version>
+        <helium-disseny.version>3.2.112</helium-disseny.version>
         <spring.version>3.2.17.RELEASE</spring.version>
         <spring-security.version>3.2.9.RELEASE</spring-security.version>
         <hibernate.version>3.6.5.Final</hibernate.version>
