--- a/microservices/helium-integracio-service/src/main/resources/application-local.properties
+++ b/microservices/helium-integracio-service/src/main/resources/application-local.properties
@@ -142,6 +142,20 @@ es.caib.helium.integracio.validacio.signatura.plugin.file.attached=true
 
 # Propietats registre
 
+# Registre REGWEB-WS
+es.caib.helium.integracio.registre.segell.entitat=GOVERN DE LES ILLES BALEARS
+#CAI 878128 #Comentades al CAI 888442
+
+# Afegeides al CAI 888442
+es.caib.helium.integracio.registre.service.ws.class=net.conselldemallorca.helium.integracio.plugins.registre.RegistrePluginRegwebWs
+es.caib.helium.integracio.registre.service.ws.url=https://proves.caib.es/regweb/WS/services/RegwebFacade?wsdl
+#es.caib.helium.integracio.registre.service.ws.usuari=$helium_regweb
+#es.caib.helium.integracio.registre.service.ws.password=
+
+es.caib.helium.integracio.registre.conversio.portasignatures.actiu=true
+es.caib.helium.integracio.registre.conversio.portasignatures.extension=pdf
+
+
 # Registre REGWEB2
 es.caib.helium.integracio.registre.service.reg2.class=net.conselldemallorca.helium.integracio.plugins.registre.RegistrePluginRegwebWs
 es.caib.helium.integracio.registre.ws.url=https://proves.caib.es/regweb2/WS/services/RegwebFacade
