#1512 Helium MS. Fase 1 Extreure el motor de jbpm com a aplicació independent

--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
 		<module>helium-selenium-webapp</module>
 		<module>helium-ws-client</module>
 		<module>helium-ms</module>
+		<module>helium-disseny-api</module>
 	</modules>
 	<build>
 		<plugins>
