--- a/microservices/helium-monitor-service/src/main/resources/application-local.properties
+++ b/microservices/helium-monitor-service/src/main/resources/application-local.properties
@@ -1,14 +1,20 @@
 spring.application.name=helium-monitor-service
 server.port=8087
 
+#Configuracio MongoDB
+spring.data.mongodb.uri=mongodb://localhost:30001/hel_dada
+spring.data.mongodb.database=hel_dada
+
 spring.zipkin.enabled=false
 spring.cloud.discovery.enabled=false
 
-## OracleDB connection settings
-#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-#spring.datasource.url=jdbc:oracle:thin:@//localhost:49161/xe
-#spring.datasource.username=hel_domini
-#spring.datasource.password=hel_domini
+#Configuracio per defecte de la imatge de docker - vromero/activemq-artemis
+spring.artemis.user=artemis
+spring.artemis.password=simetraehcapa
+
+# Classe de implementacio de BddService
+es.caib.helium.monitor.service.class=es.caib.helium.monitor.service.MongoBddService
+
 #
 ## HikariCP settings
 #spring.datasource.hikari.minimumIdle=5
