--- a/microservices/helium-dada-service/src/main/resources/docker-compose.yml
+++ b/microservices/helium-dada-service/src/main/resources/docker-compose.yml
@@ -46,6 +46,14 @@ services:
     volumes:
       - ./scripts:/scripts
     entrypoint: ['/scripts/mongo-setup.sh']
+    
+  jms:
+    image: vromero/activemq-artemis
+    ports:
+      - 8161:8161
+      - 61616:61616
+    networks: 
+      - database-mongo
 
 networks:
     database-mongo:
