--- a/microservices/helium-monitor-service/pom.xml
+++ b/microservices/helium-monitor-service/pom.xml
@@ -1,20 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>es.caib.helium</groupId>
-        <artifactId>helium-mvc-service-bom</artifactId>
-        <version>1.0</version>
-    </parent>
+	<parent>
+		<groupId>es.caib.helium</groupId>
+		<artifactId>helium-mvc-service-bom</artifactId>
+		<version>1.0</version>
+	</parent>
 
-    <artifactId>helium-monitor-service</artifactId>
-    <version>1.0.0</version>
+	<artifactId>helium-monitor-service</artifactId>
+	<version>1.0.0</version>
 
-    <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-    </properties>
+	<properties>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
+	</properties>
 
+	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongo-java-driver</artifactId>
+			<version>3.12.8</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>es.caib.helium</groupId>
+		    <artifactId>helium-jms-events</artifactId>
+		    <version>1.0</version>
+		</dependency>
+	</dependencies>
+	
 </project>
