#1492 Helium MS. Fase 3 Desenvolupar projecte (Helium-Camunda) amb el motor de workflow de Camunda amb la API REST de workflow

--- a/microservices/helium-camunda/src/main/resources/application.yaml
+++ b/microservices/helium-camunda/src/main/resources/application.yaml
@@ -3,3 +3,13 @@ spring:
     name: helium-camunda
   profiles:
     active: @activatedProperties@
+  cache:
+    jcache:
+      config: classpath:ehcache.xml
+
+es:
+  caib:
+    helium:
+      helium-data-service-host: http://localhost:8083
+      dada-service-user: user
+      dada-service-password: pass
