--- a/microservices/helium-camunda/src/main/resources/bootstrap-spring-cloud.yaml
+++ b/microservices/helium-camunda/src/main/resources/bootstrap-spring-cloud.yaml
@@ -13,3 +13,5 @@ eureka:
   client:
     service-url:
       defaultZone: http://helium:H3lEurek4@helium-eureka:8761/eureka
+  instance:
+    prefer-ip-address: true
